[gd_scene load_steps=5 format=3 uid="uid://cfixqrex7lhje"]

[ext_resource type="PackedScene" uid="uid://dspunufbyjro8" path="res://Scene/Menu/FloatingMenu.tscn" id="1_ru4uy"]
[ext_resource type="Script" path="res://Script/Scene/Menu/PauseMenu.gd" id="2_4717l"]
[ext_resource type="Script" path="res://Script/Scene/UI/DynFontSizeLabel.gd" id="3_u65ke"]
[ext_resource type="Script" path="res://Script/Scene/UI/DynFontSizeButton.gd" id="4_r7c6x"]

[node name="PauseMenu" instance=ExtResource("1_ru4uy")]
visible = true
script = ExtResource("2_4717l")

[node name="Title" type="Label" parent="." index="0"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.114604
anchor_top = 0.06
anchor_right = 0.8965
anchor_bottom = 0.185617
offset_left = -0.0240021
offset_top = 0.119999
offset_right = 0.231934
offset_bottom = -0.280014
theme_override_font_sizes/font_size = 40
text = "PAUSE"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("3_u65ke")
metadata/_edit_use_anchors_ = true

[node name="btnPlay" type="Button" parent="." index="1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.229097
anchor_top = 0.270432
anchor_right = 0.771174
anchor_bottom = 0.37916
offset_left = 0.0800018
offset_top = -0.240005
offset_right = -0.392014
offset_bottom = 0.304001
focus_neighbor_top = NodePath("../btnQuit")
focus_next = NodePath("../btnRestart")
focus_previous = NodePath("../btnQuit")
theme_override_font_sizes/font_size = 25
text = "PLAY"
script = ExtResource("4_r7c6x")
metadata/_edit_use_anchors_ = true

[node name="btnRestart" type="Button" parent="." index="2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.229097
anchor_top = 0.517346
anchor_right = 0.771174
anchor_bottom = 0.626074
offset_left = 0.0800018
offset_top = -0.240005
offset_right = -0.392014
offset_bottom = 0.304001
focus_next = NodePath("../btnQuit")
focus_previous = NodePath("../btnPlay")
theme_override_font_sizes/font_size = 25
text = "RESTART"
script = ExtResource("4_r7c6x")
metadata/_edit_use_anchors_ = true

[node name="btnQuit" type="Button" parent="." index="3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.229097
anchor_top = 0.753457
anchor_right = 0.771174
anchor_bottom = 0.862185
offset_left = 0.0800018
offset_top = -0.240005
offset_right = -0.392014
offset_bottom = 0.304001
focus_neighbor_bottom = NodePath("../btnPlay")
focus_next = NodePath("../btnPlay")
focus_previous = NodePath("../btnRestart")
theme_override_font_sizes/font_size = 25
text = "QUIT"
script = ExtResource("4_r7c6x")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="btnPlay" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="btnRestart" to="." method="_on_btn_restart_pressed"]
[connection signal="pressed" from="btnQuit" to="." method="_on_btn_quit_pressed"]
